# RLinf

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml  test_channel.py  test_cluster_config.py  test_comm.py  test_distributed_ray_log_collector.py  test_intra_gpu_comm.py  test_worker.py
.github/workflows/: ci-tests.yml  docker-build.yml  embodied-e2e-tests.yml  install.yml  sft-e2e-tests.yml  unit-tests.yml
ai2_doc/: embodied_structure.md  marl_alignment_findings.md  network_infrastructure.md  openpi_flowppo.md  quickstart.md  training_architecture.md  yam_desktop_smoke.md  yam_marl_runbook.md  yam_pi05_local_inference.md  yam_ppo_openpi.md  yam_ppo_openpi_topreward.md
docker/: Dockerfile  README.md
docs/source-en/: index.rst
docs/source-en/rst_source/: faq.rst
docs/source-zh/: index.rst
docs/source-zh/rst_source/: faq.rst
examples/embodiment/: LOCAL_YAM_LEROBOT_PI05_RUNBOOK.md  eval_embodied_agent.py  eval_embodied_agent_remote_yam.py  eval_embodiment.sh  infer_embodied_agent.py  run_embodiment.sh  run_realworld.sh  train_embodied_agent.py  train_embodied_agent_marl.py  train_embodied_agent_staged.py  train_embodied_agent_staged_async.py
examples/embodiment/config/: behavior_ppo_openpi.yaml  behavior_ppo_openvlaoft.yaml  calvin_abc_d_ppo_openpi.yaml  calvin_abc_d_ppo_openpi_pi05.yaml  calvin_abcd_d_ppo_openpi.yaml  calvin_abcd_d_ppo_openpi_pi05.yaml  calvin_d_d_ppo_openpi.yaml  calvin_d_d_ppo_openpi_pi05.yaml  frankasim_sac_cnn_async.yaml  gsenv_ppo_openpi_pi05.yaml  isaaclab_franka_stack_cube_ppo_gr00t.yaml  libero_10_grpo_openpi.yaml  libero_10_grpo_openpi_pi05.yaml  libero_10_grpo_openvlaoft.yaml  libero_10_grpo_openvlaoft_eval.yaml  libero_10_ppo_gr00t.yaml  libero_10_ppo_openpi.yaml  libero_10_ppo_openpi_pi05.yaml  libero_130_grpo_openvlaoft.yaml  libero_90_grpo_openvlaoft.yaml  libero_goal_async_ppo_gr00t.yaml  libero_goal_grpo_openpi.yaml  libero_goal_grpo_openpi_pi05.yaml  libero_goal_grpo_openvlaoft.yaml  libero_goal_ppo_gr00t.yaml  libero_goal_ppo_openpi.yaml  libero_goal_ppo_openpi_pi05.yaml  libero_object_async_ppo_openpi_pi05.yaml  libero_object_grpo_openpi.yaml  libero_object_grpo_openpi_pi05.yaml  libero_object_grpo_openvlaoft.yaml  libero_object_ppo_gr00t.yaml  libero_object_ppo_openpi.yaml  libero_object_ppo_openpi_pi05.yaml  libero_spatial_0_grpo_mlp.yaml  libero_spatial_async_ppo_openpi.yaml  libero_spatial_async_ppo_openpi_pi05.yaml  libero_spatial_grpo_openpi.yaml  libero_spatial_grpo_openpi_pi05.yaml  libero_spatial_grpo_openvlaoft.yaml  (+59 more)
ray_utils/realworld/: setup_before_ray.sh
requirements/: README.md  install.sh
requirements/embodied/: download_assets.sh
rlinf/: __init__.py  config.py
rlinf/algorithms/: __init__.py  registry.py  utils.py
rlinf/algorithms/rewards/: __init__.py
rlinf/data/: embodied_io_struct.py  lerobot_writer.py
rlinf/data/datasets/: __init__.py  vlm.py
rlinf/envs/: __init__.py  action_utils.py  utils.py
rlinf/envs/remote/: __init__.py  remote_env.py  robot_server.py  simulated_desktop.py
rlinf/envs/yam/: realsense_camera.py  yam_env.py  yam_follower_client.py
rlinf/hybrid_engines/fsdp/: fsdp_model_manager.py  utils.py
rlinf/integrations/marl/: __init__.py  client.py
rlinf/models/: __init__.py
rlinf/models/embodiment/: pi05_dtype_utils.py
rlinf/runners/: embodied_runner.py
rlinf/scheduler/: __init__.py
rlinf/scheduler/cluster/: cluster.py  config.py
rlinf/scheduler/hardware/: __init__.py  hardware.py
rlinf/utils/: data_iter_utils.py  distributed.py  metric_logger.py  utils.py
rlinf/utils/ckpt_convertor/: convert_openpi_jax_to_python.py
rlinf/utils/convertor/: utils.py
rlinf/utils/resharding/: utils.py
rlinf/workers/actor/: __init__.py  async_ppo_fsdp_worker.py  fsdp_actor_worker.py  fsdp_sac_policy_worker.py
rlinf/workers/env/: __init__.py  async_env_worker.py  env_worker.py  remote_yam_env_worker.py
rlinf/workers/inference/: utils.py
rlinf/workers/robot/: __init__.py  remote_robot_client.py  robot_worker.py
rlinf/workers/rollout/: utils.py
rlinf/workers/vlm_planner/: vlm_planner_worker.py
scripts/: join_beaker_cluster.sh  preview_grpc_cameras.py  run_yam_desktop_smoke.sh  run_yam_marl_training.sh  start_robot_server.sh  start_yam_follower_servers.py  submit_yam_beaker_cluster.sh  submit_yam_training.sh  yam_follower_server.py
tests/e2e_tests/embodied/: behavior_ppo_openpi.yaml  behavior_ppo_openvlaoft.yaml  calvin_ppo_openpi.yaml  frankasim_ppo_mlp.yaml  frankasim_sac_cnn_async.yaml  gsenv_ppo_openpi_pi05.yaml  isaaclab_ppo_gr00t.yaml  libero_goal_grpo_openvlaoft.yaml  libero_spatial_dsrl_openpi.yaml  libero_spatial_ppo_dexbotic_pi0.yaml  libero_spatial_ppo_gr00t.yaml  libero_spatial_ppo_openpi.yaml  libero_spatial_ppo_openpi05.yaml  maniskill_grpo_openvlaoft.yaml  maniskill_ppo_co_training_openpi_pi05.yaml  maniskill_ppo_openpi05.yaml  maniskill_ppo_openvla.yaml  maniskill_sac_flow_state.yaml  maniskill_sac_mlp.yaml  maniskill_sac_mlp_async.yaml  metaworld_50_ppo_openpi.yaml  opensora_libero_spatial_grpo_openvlaoft.yaml  realworld_dummy_sac_cnn.yaml  realworld_xsquare_turtle2_dummy_sac_cnn.yaml  robocasa_closedrawer_ppo_openpi.yaml  robotwin_grpo_openvlaoft.yaml  (+1 more)
tests/unit_tests/: test_async_env_worker_remote_disconnect.py  test_auto_placement.py  test_cluster_config.py  test_embodied_config_timing.py  test_embodied_io_struct.py  test_import_rlinf_package.py  test_infer_embodied_agent.py  test_lerobot_pi05_integration.py  test_openpi_checkpoint_loading.py  test_pi05_bf16_precision.py  test_pi05_cps_schedule.py  test_pi05_routing.py  test_pi05_vendored_runtime.py  test_placement.py  test_portal_process_cleanup.py  test_simulated_desktop.py  test_start_yam_follower_servers.py  test_sync_env_worker_topreward.py  test_vlm_planner_prompt.py  test_yam_env_follower_runtime.py  test_yam_env_robot_runtime.py  test_yam_follower_client.py  test_yam_remote_multiview.py  test_yam_server_timeout_restart.py  test_yam_staged_runtime_selection.py
toolkits/auto_placement/: auto_placement_worker.py  placement.py  util.py
(+119 files in other folders)
