[build-system]
requires = ["setuptools>=69.5.1,<75.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlinf"
version = "0.2.0"
authors = [{ name = "RLinf Contributors" }]
description = "Reinforcement Learning Infrastructure for Embodied AI"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.3,<3.13"
license = {file = "LICENSE"}
keywords = [
    "reinforcement-learning",
    "embodied-intelligence",
    "large-language-models",
]
classifiers = [
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.4",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]


dependencies = [
    # Core System
    # These are the dependencies of the core scheduler
    "ray[default]>=2.47.0",
    "torch==2.10.0",
    "hydra-core",
    "numpy==2.2.6",
    # Data processing
    "datasets==4.8.4",
    "torchdata",
    "fsspec==2025.3.0",
    "scipy",
    # Utilities
    "accelerate==1.13.0",
    "einops",
    "liger_kernel; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "huggingface_hub==1.7.2",
]

[project.urls]
Homepage = "https://github.com/RLinf/RLinf"
Repository = "https://github.com/RLinf/RLinf"
Documentation = "https://rlinf.readthedocs.io/"
"Bug Report" = "https://github.com/RLinf/RLinf/issues"

[project.optional-dependencies]
dev = [
    "debugpy",
    "nvitop",
    "pre-commit",
    "pytest",
    "ruff",
]
embodied = [
    "beaker-gantry>=1.16.0",
    "gym",
    "gymnasium",
    "grpcio>=1.73.1",
    "grpcio-tools>=1.73.1",
    "i2rt",
    "icmplib",
    "lerobot[pi]==0.5.0",
    "ninja",
    "pybind11",
    "pyrealsense2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "safetensors==0.7.0",
    "tensorboard",
    "tokenizers==0.22.2",
    "torchvision==0.25.0",
    "transformers==5.3.0",
    "wandb<0.25.1",
    "yam_realtime",
]

[tool.uv.sources]
yam_realtime = { path = "third_party/yam_realtime", editable = true }
i2rt = { path = "third_party/i2rt", editable = true }

[tool.uv]
prerelease = "allow"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rlinf*"]
exclude = ["tests*", "docs*", "examples*", "docker*", "toolkits*"]

[tool.setuptools.package-data]
rlinf = ["**/*.yaml", "**/*.yml"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
extend-exclude = ["third_party", "rlinf/envs/yam/remote/proto"]

[tool.ruff.lint]
isort = {known-first-party = ["rlinf"]}
select = ["C", "E", "F", "I", "W", "CPY001", "RUF013", "UP006", "PERF102", "PLC1802", "PLC0208", "D", "RUF002", "DOC102", "DOC202", "DOC403", "DOC502"]
ignore = [
    "C901", # "complex-structure"
    "E501", # "line-too-long"
    "E741", # "ambiguous-variable-name"
    "D100", # "Missing docstring in public module"
    "D104", # "Missing docstring in public package"
    "D203", # "incorrect-blank-line-before-class", conflict with D211,
    "D213", # "multi-line-summary-second-line", conflict with D212
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Only enable docstring check for the scheduler module for now.
"!rlinf/scheduler/**.py" = ["D", "RUF002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
