[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlinf"
version = "0.2.0"
authors = [{ name = "RLinf Contributors" }]
description = "Reinforcement Learning Infrastructure for Embodied and Agentic AI"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10,<=3.11.14"
license = {file = "LICENSE"}
keywords = [
    "reinforcement-learning",
    "embodied-intelligence",
    "large-language-models",
]
classifiers = [
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.4",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]


dependencies = [
    # Core System
    # These are the dependencies of the core scheduler
    "ray[default]>=2.47.0",
    "torch>=2.8.0,<=2.9.0",
    "hydra-core",
    "numpy>=1.22.4,<2.0.0",
    # Data processing
    "datasets",
    "torchdata",
    "scipy",
    # Utilities
    "accelerate",
    "debugpy",
    "einops",
    "nvitop",
    "pybind11",
    "setuptools",
    "ninja",
    "pytest",
    "gsutil",
    "ruff",
    "pre-commit",
    "liger_kernel; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "uv",
    "pip",
    "huggingface_hub>=0.34.0,<1.0",
    "icmplib",
    "pyrealsense2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    # YAM robot environment
    "gymnasium",
    "yam_realtime",
    "i2rt",
    # Logging
    "wandb<0.25.1",
    "swanlab>=0.6.11",
    "tensorboard",
    "beaker-gantry>=1.16.0",
    "regex>=2026.2.28",
]

[project.urls]
Homepage = "https://github.com/RLinf/RLinf"
Repository = "https://github.com/RLinf/RLinf"
Documentation = "https://rlinf.readthedocs.io/"
"Bug Report" = "https://github.com/RLinf/RLinf/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
]
agentic-sglang = [
    "sglang[all]==0.4.6.post5",
    "torch-memory-saver",
    "numpy==2.2",
    "transformers==4.51.1",
    # uvloop is not compatible with simulators, put it here
    "uvloop==0.21.0",
    "hydra-core==1.4.0.dev1",
    "omegaconf==2.4.0.dev4",
    "word2number",
    "regex",
    "peft==0.11.1",
    "rlinf_latex2sympy2",
    "mcp",
]
agentic-vllm = [
    "vllm==0.8.5",
    "numpy==2.2",
    "transformers==4.51.1",
    # uvloop is not compatible with simulators, put it here
    "uvloop==0.21.0",
    "hydra-core==1.4.0.dev1",
    "omegaconf==2.4.0.dev4",
    "word2number",
    "regex",
    "peft==0.11.1",
    "rlinf_latex2sympy2",
    "mcp",
]
embodied = [
    "transformers==4.57.3",
    "peft",
    "timm",
    "imageio[ffmpeg]",
    "gymnasium",
    "gym",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "qwen-vl-utils",
]
franka = [
    "pyyaml",
    "rospkg",
    "empy==3.3.4",
    "gymnasium==0.29.1",
    "pyrealsense2",
    "pyquaternion",
    "opencv-python",
    "defusedxml",
    "pyspacemouse==1.1.5", 
    "imageio[ffmpeg]",
    "pynput"
]
xsquare_turtle2 = [
    "pyyaml",
    "rospkg",
    "toppra",
    "numpy==1.26.4",
    "empy==3.3.4",
    "gymnasium==0.29.1",
    "pyrealsense2",
    "pyquaternion",
    "opencv-python",
    "defusedxml",
    "pyspacemouse==1.1.5", 
    "imageio[ffmpeg]",
    "pynput"
]

[tool.uv.sources]
yam_realtime = { path = "third_party/yam_realtime", editable = true }
i2rt = { path = "third_party/i2rt", editable = true }

[tool.uv]
prerelease = "allow"
conflicts = [
    [
      { extra = "agentic-sglang" },
      { extra = "agentic-vllm" },
      { extra = "embodied" },
      { extra = "franka" },
      { extra = "xsquare_turtle2" }
    ],
]
override-dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.6.0",
    "torchcodec==0.2",
    "xgrammar==0.1.19",
    "uvloop==0.21.0",
    "tensorflow-addons==0.23.0",
    "setuptools>=69.5.1,<75.9",
    "datasets==3.6.0",
    "peft==0.11.1",
    "transformers==4.57.3",
    "huggingface-hub==0.36.2",
    "tokenizers>=0.22.0,<=0.23.0",
    "numpy==1.26.4",
    "fsspec==2025.3.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rlinf*"]
exclude = ["tests*", "docs*", "examples*", "docker*", "toolkits*"]

[tool.setuptools.package-data]
rlinf = ["**/*.yaml", "**/*.yml"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
extend-exclude = ["third_party", "rlinf/envs/remote/proto"]

[tool.ruff.lint]
isort = {known-first-party = ["rlinf"]}
select = ["C", "E", "F", "I", "W", "CPY001", "RUF013", "UP006", "PERF102", "PLC1802", "PLC0208", "D", "RUF002", "DOC102", "DOC202", "DOC403", "DOC502"]
ignore = [
    "C901", # "complex-structure"
    "E501", # "line-too-long"
    "E741", # "ambiguous-variable-name"
    "D100", # "Missing docstring in public module"
    "D104", # "Missing docstring in public package"
    "D203", # "incorrect-blank-line-before-class", conflict with D211,
    "D213", # "multi-line-summary-second-line", conflict with D212
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Only enable docstring check for the scheduler module for now.
"!rlinf/scheduler/**.py" = ["D", "RUF002"]
"rlinf/vendor/transformers_pi05/**/*.py" = ["CPY001", "DOC102"]
"rlinf/models/embodiment/pi05/modeling_pi05.py" = ["CPY001", "DOC102"]
"rlinf/models/embodiment/pi05/processor_pi05.py" = ["CPY001", "DOC102"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
